Make general fixes to Users component, add collapse text feature in the list

--- a/src/app/users/user-list/user-list.component.css
+++ b/src/app/users/user-list/user-list.component.css
@@ -20,6 +20,12 @@
     margin-top: 1em;
 }
 
+.collapse-text {
+    font-weight: normal;
+    word-break: break-word;
+    white-space: pre-wrap !important;
+}
+
 .mat-column-id {
     max-width: 13%;
 }
